[workspace]
resolver = "2"
members = [
    "ch5",
    "ch5/ch5_q",
    "ch6",
    "ch6/ch6_particles",
    "ch7",
    "ch7/ch7-serde-eg",
    "ch7/ch7-actionkv",
    "ch7/ch7-write123",
    "ch8",
    "ch8/ch8-simple",
    "ch8/ch8-stdlib",
    "ch8/ch8-resolve",
    "ch8/misc",
    "ch8/ch8-mac",
#    "ch8/ch8-mget",
]