[workspace]
resolver = "2"
members = [
    "ch5",
    "ch5/ch5_q",
    "ch6",
    "ch6/ch6_particles",
    "ch7",
    "ch7/ch7-serde-eg",
    "ch7/ch7-actionkv",
    "ch7/ch7-write123",
    "ch8",
    "ch8/ch8-simple",
    "ch8/ch8-stdlib",
    "ch8/ch8-resolve",
    "ch8/misc",
    "ch8/ch8-mac",
#    "ch8/ch8-mget",
    "ch9",
    "ch9/ch9-clock",
    "ch10",
    "ch10/ch10-busythreads",
    "ch10/ch10-multijoin",
    "ch10/ch10-render-hex",
    "ch10/ch10-render-hex-functional",
    "ch10/ch10-channels-intro",
    "ch10/ch10-channels-complex",
]
