[package]
name = "ch7-actionkv"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
crc = "3.3.0"
serde_derive = "1.0.228"
serde = "1.0.228"
bincode = { version = "2.0.1", features = ["serde"] }

[lib]
name = "libactionkv"
path = "src/lib.rs"

[[bin]]
name = "akv-mem"
path = "src/akv_mem.rs"

[[bin]]
name = "akv-disk"
path = "src/akv_disk.rs"
