[package]
name = "ch9-clock"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
clap = "4.5.50"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
kernel32-sys = "0.2.2"

[target.'cfg(not(windows))'.dependencies]
libc = "1.0.0-alpha.1"

[[bin]]
name = "ch9-clock"
path = "src/main.rs"
